--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <div class="container">
+   <div class="tabs">
+        <a href="#login" class="tab">Login</a>
+        <a href="#signup" class="tab">Sign Up</a>
+    </div>
 
   <!-- Login Form -->
   <div class="form-box">
@@ -35,4 +38,5 @@
 
 </body>
 </html>
+
 
